fix alignment of skills container

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 body {
-  width: 100%;
+  /*width: 100%;*/
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
   background-color: black;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 html {
   width: 100%;
@@ -62,7 +64,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom .navbar-brand .navbar-toggle {
-  padding: 4px 4px;
+  padding: 4px 6px;
   font-size: 16px;
   color: white;
 }
@@ -120,7 +122,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url("img/gradient.jpg") no-repeat bottom center scroll;
+  background: url("https://s3-us-west-1.amazonaws.com/cp-images/gradient.jpg") no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -316,13 +318,12 @@ body {
 
 #skill_container {
   position: relative;
-  /*margin: 10px auto;*/
+  margin: 10px auto;
   width: 100px;
   height: 100px;
   z-index: 1;
-  padding-right: 75px;
-  padding-left: 75px;
   padding-bottom: 50px;
+  display: block;
 }
 
 #skill_container {
@@ -351,7 +352,7 @@ body {
   display: block;
   transform: rotateY(180deg);
   box-sizing: border-box;
-  padding: 10px;
+  padding: 20px;
   color: white;
   line-height: 50px;
   text-align: center;
@@ -377,6 +378,11 @@ body {
   }
 }
 
+.skill_row {
+  display: inline-block;
+  width: 100%;
+}
+
 /*end developer icon styling*/
 
 /*new carousel*/
@@ -389,11 +395,7 @@ body {
 #myCarousel a:hover {
   color: #42DCA3;
 }
-/*
-.img-responsive {
-  max-height: 50%;
-}
-*/
+
 .carousel-inner img {
   opacity: .50;
 }
